<resources>
    <string name="app_name">Censo ICM</string>
    <string name="title_activity_cadastro">Censo</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="erro_generico">Desculpe, ocorreu um erro.</string>
    <string name="no_data">Desculpe, nenhuma informação foi encontrada para essa(s) data(s).</string>
    <string name="auth_failed">Não foi possível realizar o login,verifique seu email e sua senha.</string>
    <string name="title_activity_relatorio_dia">RelatorioDiaActivity</string>
    <string name="relatorio_obreiro_louvor">Louvor:</string>
    <string name="relatorio_obreiro_palavra">Palavra:</string>
    <string name="relatorio_obreiro_porta">Porta:</string>
    <string name="relatorio_dom">Dom:</string>
    <string name="relatorio_louvores">Louvores:</string>
    <string name="relatorio_texto_biblico">Texto Bíblico:</string>
    <string name="relatorio_data">Data:</string>
    <string name="relatorio_frequencia">Frequência</string>
    <string name="title_activity_novo_relatorio_dia">NovoRelatorioDiaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Parse -->
    <string name="parse_server_url">https://parseapi.back4app.com/</string>
    <string name="parse_app_id">IoKiBX4HFAZQYVDAkhIMb0WeeZV7DuIQUTGyZkPY</string>
    <string name="parse_client_key">9fu8pfEgKLNOzVI1cJmkbw38a0smb7y9RGO32OJi</string>

    <!-- Esquema DB -->
    <string name="db_table_name">censo</string>
    <string name="db_col_jovens">qtd_jovens</string>
    <string name="db_col_criancas">qtd_criancas</string>
    <string name="db_col_visitantes">qtd_visitantes</string>
    <string name="db_col_varoes">qtd_varoes</string>
    <string name="db_col_adolescentes">qtd_adolescentes</string>
    <string name="db_col_total">qtd_total</string>
    <string name="db_col_dom">dom</string>
    <string name="db_col_obreiro_louvor">obreiro_louvor</string>
    <string name="db_col_obreiro_palavra">obreiro_palavra</string>
    <string name="db_col_texto_biblico">texto_biblico</string>
    <string name="db_col_data">data</string>
    <string name="db_col_obreiros_porta">obreiros_porta</string>
    <string name="db_col_louvores">louvores</string>
    <string name="db_col_nome_igreja">nome_igreja</string>

</resources>
