<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="icm.censo.a3_code.com.censoicm.RelatorioDiaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/relatorio_secessao_obreiros"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:text="Obreiros"
            android:visibility="visible"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/relatorio_obreiro_louvor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_obreiro_louvor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_obreiro_palavra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_obreiro_palavra"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_obreiro_porta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_obreiro_porta"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_secessao_culto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:text="Informações do Culto"
                android:visibility="visible"
                android:gravity="center"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/relatorio_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_data"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_louvores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_louvores"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_dom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/relatorio_dom"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_texto_biblico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/relatorio_texto_biblico"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/relatorio_secessao_frequencia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:text="Frequência"
                android:visibility="visible"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
